# pxt-cloud-sets

./: .gitignore  README.md  aud-drone-hf.ipynb  img-cifar10-fiftyone.ipynb  img-coco-hf.ipynb  img-coco-roboflow.ipynb  img-mnist-hf.ipynb  img-new-yorker-hf.ipynb  img-padoru-hf.ipynb  pyproject.toml  vid-activitynet-fiftyone.ipynb  vid-goodall-gcs.ipynb  vid-miradata-hf.ipynb
